<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
    android:padding="15dp"
	>

	<RelativeLayout
		android:id="@+id/sensor_name_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/sensor_name_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/information_name_title"
			style="@style/CustomKey"/>

		<TextView
			android:id="@+id/sensor_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/sensor_name_title"
			android:layout_toEndOf="@id/sensor_name_title"
			android:layout_toRightOf="@id/sensor_name_title"
			style="@style/CustomValue"/>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/sensor_vendor_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/sensor_vendor_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/information_vendor_title"
			style="@style/CustomKey"/>

		<TextView
			android:id="@+id/sensor_vendor"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/sensor_vendor_title"
			android:layout_toEndOf="@id/sensor_vendor_title"
			android:layout_toRightOf="@id/sensor_vendor_title"
			style="@style/CustomValue"/>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/sensor_type_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/sensor_type_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/information_type_title"
			style="@style/CustomKey"/>

		<TextView
			android:id="@+id/sensor_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/sensor_type_title"
			android:layout_toRightOf="@id/sensor_type_title"
			android:layout_toEndOf="@id/sensor_type_title"
			style="@style/CustomValue"/>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/sensor_min_delay_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/sensor_min_delay_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/information_min_delay_title"
			style="@style/CustomKey"/>

		<TextView
			android:id="@+id/sensor_min_delay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/sensor_min_delay_title"
			android:layout_toRightOf="@id/sensor_min_delay_title"
			android:layout_toEndOf="@id/sensor_min_delay_title"
			style="@style/CustomValue"/>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/sensor_max_delay_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/sensor_max_delay_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/information_max_delay_title"
			style="@style/CustomKey"/>

		<TextView
			android:id="@+id/sensor_max_delay"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/sensor_max_delay_title"
			android:layout_toEndOf="@id/sensor_max_delay_title"
			android:layout_toRightOf="@id/sensor_max_delay_title"
			style="@style/CustomValue"/>

	</RelativeLayout>



	<RelativeLayout
		android:id="@+id/sensor_resolution_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/sensor_resolution_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/information_resolution_title"
			style="@style/CustomKey"/>

		<TextView
			android:id="@+id/sensor_resolution"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/sensor_resolution_title"
			android:layout_toEndOf="@id/sensor_resolution_title"
			android:layout_toRightOf="@id/sensor_resolution_title"
			style="@style/CustomValue"/>

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/sensor_power_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/sensor_power_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/information_power_title"
			style="@style/CustomKey"/>

		<TextView
			android:id="@+id/sensor_power"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/sensor_power_title"
			android:layout_toEndOf="@id/sensor_power_title"
			android:layout_toRightOf="@id/sensor_power_title"
			style="@style/CustomValue"/>

	</RelativeLayout>



</LinearLayout>


